--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -5,20 +5,9 @@
     justify-content: center;
     top: 50px;
     overflow: auto;
-}
-.lab-signup-container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    position: relative;
 }
 
-.lab-signup-container h2 {
-    text-align: center;
-    margin-bottom: 20px;
-}
 
 .form-group {
     margin-bottom: 15px;
