--- a/src/components/maincontent/maincontent.css
+++ b/src/components/maincontent/maincontent.css
@@ -1,12 +1,12 @@
 /* container styliing */
 .container{
-    width: 100vw;
-    margin-left: 20vw;
-    margin-right: 0;
-    background-color: antiquewhite;
     display: flex;
-    overflow: auto;
     flex-direction: column;
-    top: 60px;
+    margin-right: 0;
+    justify-content: end;
+    width: 80%;
+    margin-left: 20%;
+    margin-top: 60px;
     position: relative;
+    overflow: auto;
 }
