--- a/src/components/addtests/addtests.css
+++ b/src/components/addtests/addtests.css
@@ -1,9 +1,12 @@
-.form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    top: 50px;
-    overflow: auto;
-    position: relative;
+
+* .single {
+    width: 40%;
+    margin-right: 10%;
+    margin: 0 auto; 
+    padding: 20px;
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-right: 30%;
+    margin-top: 80px;
 }
