--- a/src/components/nurses/nurses.css
+++ b/src/components/nurses/nurses.css
@@ -8,14 +8,6 @@
   margin-top: 60px;
 
 }
-
-/* .card {
-  width: 65%;
-  background-color: white;
-  border-radius: 8px;
-  overflow: hidden;
-} */
-
 table {
   width: 80%;
   border-collapse: collapse;
@@ -50,3 +42,29 @@ tr:hover {
 .p-4 {
   padding: 16px;
 }
+
+
+
+/* .form {
+    width: 75%;
+    margin: 0 auto; 
+    padding: 20px;
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-right: 2%;
+    margin-top: 50px;
+}
+
+.form input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+.form table {
+    width: 100%;
+    margin-top: 20px;
+} */
